# pyetl_zz

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.MD  docker-compose.yaml  install.sh  pyproject.toml  readme.md  requirements.txt  run.py
pyetl_zz/infrastructure/drivers/: crawler.py  test_crawler.py
src/: main.py
src/drivers/: http_request.py  http_request_test.py
