[tool.poetry]
name = "pyetl-zz"
version = "1.0.0"
description = "Open ETL tool"
authors = ["Marilzon <maxmaril@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
